2025/01/13 优化jpa entity类